--- a/src/app/inside/orders/order-edit/order-edit.component.html
+++ b/src/app/inside/orders/order-edit/order-edit.component.html
@@ -57,8 +57,11 @@
         <input matInput placeholder="" formControlName="total" value="{{total}}" type="number" >
       </mat-form-field>
 <br><p></p>
+<p><mat-checkbox formControlName="close" >Đóng bill (In bill & Thanh toán)</mat-checkbox>  
+</p>
 <button mat-raised-button color="primary" type="submit" [disabled]="!orderForm.valid">Lưu SP</button>
-  <button mat-raised-button color="warn" [routerLink]="['/products']" type="button" (click)="cancel()">Quay về</button>
+<button mat-raised-button color="warn" [routerLink]="['/products']" type="button" (click)="cancel()">Quay về</button>
+<button mat-raised-button color="primary" type="button" (click)="printReceipt()" [disabled]="!orderForm.value.close">In receipt</button>
 </form> 
 
 <br>Dirty: {{ orderForm.dirty }}
